# rovr

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  install-service.sh  install.sh  justfile  rovr.service  shell.nix  uninstall-service.sh  update.sh
src/: main.rs
