[package]
name = "rovr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
nostr = "0.25"
nostr-sdk = "0.25"
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
qrcode = "0.12"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
