[package]
name = "rovr"
version = "0.1.0"
edition = "2021"
description = "A Rust-based project for video processing and manipulation"
authors = ["Ethan Tuttle"]
license = "MIT"
repository = "https://github.com/EthnTuttle/rovr"
readme = "README.md"

[dependencies]
anyhow = "1.0"
nostr = "0.25"
nostr-sdk = "0.25"
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
qrcode = "0.12"
log = "0.4"
env_logger = "0.10"
directories = "5.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
